# MirageBot

./: .gitignore  README.md
CactusBot/: .env.dev  README.md  bot.py  pyproject.toml
CactusBot/src/plugins/dice/: __init__.py  handler.py  processor.py
CactusBot/src/plugins/help/: handler.py
